create MVC file structure

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="style.css">
 
   <meta charset="UTF-8">
   <meta name="description" content="Personal Website">
@@ -13,68 +14,7 @@
 
 <title>Alexander Ballou</title>
 <link rel="icon" href="media/ddb15453363c09448b8f658bc3384335-sticker copy.png">
-<style>
 
-.bodywrap {
-  width: 80%;
-  margin: auto;
-}
-.header {
-  flex: 1 0 auto;
-  background-color: rgb(250, 94, 94);
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
-}
-.wrapper {
-  display: flex;
-}
-.body1 {
-  
-  background-color:lightblue;
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  
-
-}
-.body2 {
-  
-  background-color:grey;
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
-  
-}
-.body3 {
-  flex: 1 0 auto;
-  background-color:lightgreen;
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
-}
-
-.body4 {
-  
-  background-color:orange;
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  width: 50%;
-}
-.body5 {
-  
-  background-color:rgb(0, 0, 0);
-  padding: 0px 0px 0px 0px;
-  border-radius: 25px;
-  width: 50%;
-}
-.body6 {
-  
-  background-color:honeydew;
-  padding: 10px 25px 10px 25px;
-  border-radius: 25px;
-  
-}
-
-
-
-</style>
 </head>
 
 <body style="background-color:rgb(248, 230, 210);">
@@ -119,21 +59,23 @@
       <center>
         <h1>  Youtube </h1>
       </center>
+      <div class="youtube1">
+        <center>
+          <h1>Channel 1</h1>
+        </center>
+      </div>
+      <div class="youtube2">
+        <center>
+          <h1>Channel 2</h1>
+        </center>
+      </div>
+
     </div>
   </div>
 
-  <script>
-    //annonymous function
-    var headline = document.getElementById("clickHeadline");
-    
-    headline.onclick = function() {
-      headline.innerHTML = "🥸";
-    };
-    </script>
 
 
-
-
+<script src="script.js"></script>
 
 
 <footer class="footer">
