added link to git repository

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h1> My name is Alex! I like to learn new things. </h1>
         <h1> I'm currently learning web development and building projects in my spare time. </h1>
         <h1> Follow me on Github @necessities. </h1>
+        <h1> Find the repository for this site at https://github.com/necessities/alexanderballou.com</h1>
       </div>
      </div> 
     <div class="body3">  
