--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
   <div class="bodywrap">
     <div class="header"> 
       <center>
-        <h1 id="clickHeadline">🤪Welcome!🥹</h1>
+        <h1 id="clickHeadline">😁Welcome!😎</h1>
       </center>
     </div>
     <div class="wrapper">
@@ -39,7 +39,7 @@
      </div> 
     <div class="body3">  
       <center>
-        <h1 id="header"> 👽Projects🥰 </h1>
+        <h1 id="header"> 👽Projects🧐 </h1>
       </center>
     </div>
     <div class="wrapper">
