create bootstrap site

--- a/html/index.html
+++ b/html/index.html
@@ -77,14 +77,14 @@
 
 
     </div>
-    
+  
     <div class="youtube">
       <center>
         <h1>  Youtube </h1>
       </center>
       <div class="youtube1">
         <center>
-          <h1>Channel 1</h1>
+          <h1>How To Channel 1</h1>
         </center>
       </div>
       <div class="youtube2">
