--- a/html/bootstrap/index.html
+++ b/html/bootstrap/index.html
@@ -4,7 +4,7 @@
         <title>Bootstrap Tutorial Sample Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bootstrap.min.css">
 
 	</head>
     
