--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
           <center><h1>React</h1></center>
         </div>
         <div class="body8">
-          <center><h1>BootStrap</h1></center>
+          <center><a href="bootstrap/index.html">BootStrap</a></center>
         </div>
         <div class="body9">
           <center><h1>hi</h1></center>
