--- a/html/bootstrap/index.html
+++ b/html/bootstrap/index.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Home
+                    <a class="nav-link active" href="alexanderballou.com">Home
                       <span class="visually-hidden">(current)</span>
                     </a>
                   </li>
