change font size

--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
           <center><h1>React</h1></center>
         </div>
         <div class="body8">
-          <center><a href="bootstrap/index.html" style=font: size 30px;; >BootStrap</a></center>
+          <center><a href="bootstrap/index.html" style=font-size:larger; >BootStrap</a></center>
         </div>
         <div class="body9">
           <center><h1>hi</h1></center>
