--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body style="background-color:rgb(248, 230, 210);">
-  <div class="bodywrap">
+  <center>
+  <div class="bodywrap" style="width:80%;">
     <div class="header"> 
       <center>
         <h1 id="clickHeadline">😁Welcome!😎</h1>
@@ -94,6 +95,7 @@
       </div>
     </div>
   </div>
+</center>
 
 
 
