color on headers

--- a/html/index.html
+++ b/html/index.html
@@ -35,9 +35,9 @@
           <div class="column middle">
              <h2 style="color: white; text-align: left;"> what i'm up to</h2>
              <hr>
-             <h3 style="color: white; text-align: left;"> web development </h3>
+             <h3 style="color: lightgreen; text-align: left;"> web development </h3>
              <h4 style="color: white; text-align: left;"> I'm currently learning react web development and building projects in my spare time.</h4>
-             <h3 style="color: white; text-align: left;"> app development </h3>
+             <h3 style="color: lightskyblue; text-align: left;"> app development </h3>
              <h4 style="color: white; text-align: left;"> I'm also learning how to build ios apps! </h4>
              <hr>
 
