--- a/html/index.html
+++ b/html/index.html
@@ -8,12 +8,20 @@
   <meta name="keywords" content="Web Design, Blog">
   <meta name="author" content="Alexander Ballou">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-
+  
 <title>Alexander Ballou</title>
 <link rel="icon" href="media/portrait.png"
+      
+      
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VNT9CYTV85"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VNT9CYTV85');
+</script>
 
 </head>
 
