--- a/html/index.html
+++ b/html/index.html
@@ -53,6 +53,8 @@
              <h4 style="color: white; text-align: left;"> I'm also learning how to build ios apps! </h4>
              <hr>
              <h2 style="color: white; text-align: left;"> projects</h2>
+             <div style="height: 50px; width: 50px; background-color: blue;" ></dv>
+              <div style="height: 50px; width: 50px; background-color: rgb(232, 12, 12);" ></dv>
 
              <footer class="footer">
               <!-- <center>
@@ -63,17 +65,19 @@
              
              <h2 style="color: white;"> Skills </h2>
              <h2 style="color: white;"> HTML/CSS </h2>
-             <h2 style="color: white;"> JAVASCRIPT </h2>
+             <h2 style="color: rgb(242, 213, 74);"> JAVASCRIPT </h2>
              <h2 style="color: white;"> REACT </h2>
-             <h2 style="color: white;"> RUBY </h2>
+             <h2 style="color: white;"> GIT </h2>
+             <h2 style="color: rgb(160, 39, 22);"> RUBY </h2>
              <h2 style="color: white;"> POSTGRESQL </h2>
-             <h2 style="color: white;"> AWS </h2>
+             <h2 style="color: rgb(224, 119, 49);"> AWS </h2>
              <h2 style="color: white;"> AZURE </h2>
              <h2 style="color: white;"> MACOS </h2>
              <h2 style="color: white;"> WINDOWS </h2>
              <h2 style="color: white;"> LINUX </h2>
              <h2 style="color: white;"> DEBIAN/UBUNTU </h2>
              <h2 style="color: white;"> CENTOS/RH </h2>
+             <h2 style="color: white;"> VIRTUALIZATION </h2>
            </div>
            
         </div>
