--- a/html/index.html
+++ b/html/index.html
@@ -53,10 +53,10 @@
              <h4 style="color: white; text-align: left;"> I'm also learning how to build ios apps! </h4>
              <hr>
              <h2 style="color: white; text-align: left;"> projects</h2>
-             <div style="height: 50px; width: 50px; background-color: blue;" ></dv>
-              <div style="height: 50px; width: 50px; background-color: rgb(232, 12, 12);" ></dv>
+             <div style="height: 50px; width: 50px; background-color: blue;" ></div>
+              <div style="height: 50px; width: 50px; background-color: rgb(232, 12, 12);" ></div>
 
-             <footer class="footer">
+            
               <!-- <center>
                 <h2 style="color: white ;"> Find the repository for this site at https://github.com/necessities/alexanderballou.com</h2>
               </center> -->
