--- a/html/index.html
+++ b/html/index.html
@@ -64,12 +64,16 @@
           <div class="column right">
              
              <h2 style="color: white;"> Skills </h2>
+             <h2 style="color: white;"> SOFTWARE </h2>
+             <hr>
              <h2 style="color: white;"> HTML/CSS </h2>
              <h2 style="color: rgb(242, 213, 74);"> JAVASCRIPT </h2>
              <h2 style="color: white;"> REACT </h2>
              <h2 style="color: white;"> GIT </h2>
              <h2 style="color: rgb(160, 39, 22);"> RUBY </h2>
              <h2 style="color: white;"> POSTGRESQL </h2>
+             <h2 style="color: white;"> OS & VIRTUALIZATION </h2>
+             <hr>
              <h2 style="color: rgb(224, 119, 49);"> AWS </h2>
              <h2 style="color: white;"> AZURE </h2>
              <h2 style="color: white;"> MACOS </h2>
@@ -77,7 +81,11 @@
              <h2 style="color: white;"> LINUX </h2>
              <h2 style="color: white;"> DEBIAN/UBUNTU </h2>
              <h2 style="color: white;"> CENTOS/RH </h2>
-             <h2 style="color: white;"> VIRTUALIZATION </h2>
+             <h2 style="color: white;"> VMWARE / VCENTER </h2>
+             <h2 style="color: white;"> HARDWARE </h2>
+             <hr>
+             <h2 style="color: white;"> PC BUILD & REPAIR </h2>
+             <h2 style="color: white;"> MAC REPAIR </h2>
            </div>
            
         </div>
